# clipper

./: .gitmodules
clipper_admin/clipper_admin/kubernetes/: kubernetes_container_manager.py
examples/basic_query/: example_client_kubernetes.py
scripts/kubernetes/: setupk8s.sh  teardownk8s.sh
scripts/workload-generator/: optimization_function.py  query_generator.py  query_generator_dev.ipynb
scripts/workload-generator/.ipynb_checkpoints/: query_generator_dev-checkpoint.ipynb
src/libclipper/include/clipper/: datatypes.hpp  json_util.hpp
src/libclipper/src/: datatypes.cpp  json_util.cpp
src/libs/: CMakeLists.txt
src/management/: CMakeLists.txt
src/management/src/: management_frontend.hpp  management_frontend_main.cpp  optimizer.cpp  optimizer.hpp
